--- a/minstil.css
+++ b/minstil.css
@@ -127,7 +127,6 @@ a {
 
 
 #indhold {
-<<<<<<< HEAD
     background-color: #396060; 
     width: 100%; 
 }
@@ -142,7 +141,6 @@ iframe {}
     display: grid; 
     grid-template-columns: 1fr 1fr; 
     grid-template-rows: 1fr 1fr; 
-=======
     background-color: #396060;
 }
 
@@ -150,7 +148,7 @@ iframe {}
     background-color: #fff;
 }
 
-h1 {text-align: center;
+h1, h3 {text-align: center;
 padding-top: 50px;}
 
 #check-grid{
@@ -160,5 +158,4 @@ padding-top: 50px;}
 
 #checkin_info {
     place-self: center; 
->>>>>>> 2d67075bef0edaced08cb847bad724984b08b9e0
 }
