--- a/minstil.css
+++ b/minstil.css
@@ -128,36 +128,90 @@ a {
 
 
 #indhold {
-    background-color: #396060; 
-    width: 100%; 
+    background-color: #396060;
+    width: 100%;
 }
 
 #billeder {
-    width: 100%; 
+    width: 100%;
 }
 
 iframe {}
 
 #galleri {
-    display: grid; 
-    grid-template-columns: 1fr 1fr; 
-    grid-template-rows: 1fr 1fr; 
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    grid-template-rows: 1fr 1fr;
     background-color: #396060;
 }
 
 #checkin {
-    background-color: #fff;
+    background-image: url(images/check_in.png);
+    background: cover;
 }
 
-h1, h3 {text-align: center;
-padding-top: 50px;}
+h1,
+h3 {
+    text-align: center;
+    padding-top: 50px;
+}
 
-#check-grid{
+#check-grid {
     display: grid;
     grid-template-rows: 1fr 1fr;
 }
 
 #checkin_info {
-    place-self: center; 
+    place-self: center;
 }
 
+/*restaurant.html*/
+
+#restaurant {
+    background-image: url(images/restaurant_v.png);
+    background-size: cover;
+}
+
+#R_overskrift {
+    color: white;
+    margin-top: 10%;
+    margin-bottom: 8%;
+    font-size: 250%;
+}
+
+#grid-wrap {
+    display: grid;
+    grid-template-rows: 100px 1fr;
+}
+
+#booking_knap {
+    place-self: center; 
+    color: white;
+    background-color: #396060; 
+    opacity: 0.8;
+    font-size: 20px;
+    padding: 2%;
+    border: none;
+}
+
+#tekstboks {
+    background-color: #396060;
+    place-self: center;
+    margin: 2%;
+    margin-left: 10%;
+    margin-right: 10%;
+    padding: 2%;
+    opacity: 0.8;
+    padding-left: 5%;
+    padding-right: 5%;
+}
+
+#tekstboks p {
+    color: white;
+    font-size: 20px;
+    font-family: 'Source Sans Pro', sans-serif;
+}
+
+#booking_knap {
+    text-align: center;
+}
