--- a/minstil.css
+++ b/minstil.css
@@ -1,9 +1,10 @@
 * {
     margin: 0;
     padding: 0;
+    font-family: 'Source Sans Pro', sans-serif;
 }
 
-font-family: 'Source Sans Pro', sans-serif;
+
 
 /* index.html */
 
@@ -44,6 +45,8 @@ font-family: 'Source Sans Pro', sans-serif;
     margin: 20px;
 }
 
+/* NAVIGATION */  
+
 #main-nav a {
     display: block;
     font-size: 1.4em;
@@ -57,11 +60,7 @@ nav {
     padding-left: 0px;
 }
 
-/* nav a:hover {
-    color: #ae8e6f;
 
-
-} */
 
 nav img {
     width: 90px;
@@ -111,7 +110,7 @@ a {
     color: white;
 }
 
-
+/* FORSIDE */ 
 
 #flexbox {
     display: grid;
@@ -137,12 +136,9 @@ a {
 
 iframe {}
 
-#galleri {
-    display: grid; 
-    grid-template-columns: 1fr 1fr; 
-    grid-template-rows: 1fr 1fr; 
-    background-color: #396060;
-}
+
+
+/* CHECK IND */ 
 
 #checkin {
     background-color: #fff;
@@ -150,6 +146,7 @@ iframe {}
 
 h1, h3 {text-align: center;
 padding-top: 50px;}
+
 
 #check-grid{
     display: grid;
@@ -160,3 +157,88 @@ padding-top: 50px;}
     place-self: center; 
 }
 
+
+/* FACILITET */
+
+#galleri {
+    display: grid; 
+    grid-template-columns: 1fr 1fr; 
+    grid-template-rows: 1fr 1fr;
+} 
+
+.bgfacilitet1 {
+    height: 400px; 
+    width: 100%; 
+    background-image: url(images/yoga.png);
+    background-size: cover; 
+    margin-top: 2%; 
+}
+
+.bgfacilitet2 {
+    height: 400px; 
+    width: 100%; 
+    background-image: url(images/spa.png);
+    background-size: cover; 
+     
+}
+
+.bgfacilitet3 {
+    height: 400px; 
+    width: 100%; 
+    background-image: url(images/bar.png);
+    background-size: cover; 
+     
+}
+
+
+.bgfacilitet4 {
+    height: 400px; 
+    width: 100%; 
+    background-image: url(images/room.png);
+    background-size: cover; 
+     
+}
+
+
+.tekstbox {
+    background-color: #396060; 
+    opacity: 0.8; 
+    height: 300px; 
+    width: 300px; 
+    place-self: center; 
+    margin-top: 8%; 
+}
+
+.facilitettekst {
+    color: white; 
+}
+
+.facilitettekst_p {
+    color: white; 
+    padding-right: 10px; 
+    padding-left: 10px; 
+    padding-top: 20px; 
+}
+
+#vbar {
+    grid-column: 2/3;
+}
+
+.button {
+    background-color: transparent;
+    border: 1px solid white;
+    padding: 0.1em 2em;
+    cursor: hand;
+    transition: background .2s ease-in, transform .25s ease-in-out;
+    width: 30%;
+    margin: 0 auto;
+    margin-bottom: 3%;
+    margin-top: 10%;
+    text-align: center; 
+
+}
+
+.button:hover {
+    background-color:  #334E4E;
+
+}
