--- a/minstil.css
+++ b/minstil.css
@@ -377,6 +377,10 @@ background-color: #396060;
     opacity: 0.8; 
     color: white;
 }
+
+.spgtekst {
+    color: black; 
+}
  
 h2 {
     color: white; 
